# CSS581_Group8_Project_Cell_Pertubations

./: .gitignore  Data_exploration.ipynb  README.md  XGboost.ipynb  dependencyBuilder.py  output.txt  pyproject.toml  requirements.txt  tensorflow.ipynb
gen_data/: b_cells_counts.csv  clusters.csv  clusters_sorted.csv  myeloid_cells_counts.csv
models/: complex_net_633.pth  fine_tuned_complex_net.pth  initial_complex_net.pth
nn_auto_rev2/: data_preprocessing.py  main.py  model.py  train.py
nn_only_src/: data_processing.py  evaluation.py  main.py  model.py  training.py
nn_wauto_src/: main.py  utils.py
old_src/: NnNet3.py  autoEncoderNet.py  autoEncoderTrain.py  autoNetTrain2.py  autoNet_train.py  output_train3.py
old_src/old_used_for_notes/: NnNet2_old.py  NnNet_old.py  Train3.py  output.py
src/: Clustering.py  NnInter.py  NnModelTest.py  NnNet.py  NnNet3.py  NnTrain.py  NnTrain3.py  Train3.py  data_preprocessing.py  main.py  model.py  output.py  output3.py  output_train3.py  train.py  transferLearn.py  utils.py
