[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "*"
MinMaxScaler = "*"
pandas = "*"
Chem = "*"
MultiOutputRegressor = "*"
Adam = "*"
seaborn = "*"
RandomForestRegressor = "*"
numpy = "*"
XGBRegressor = "*"
dump = "*"
Sequential = "*"
train_test_split = "*"
os = "*"
mean_squared_error = "*"
matplotlib.pyplot = "*"
psutil = "*"
Descriptors = "*"
networkx = "*"
Dense = "*"
