[tool.poetry.dependencies]
python = "^3.8"
Parallel = "*"
Axes3D = "*"
TSNE = "*"
AllChem = "*"
Chem = "*"
tensorflow = "*"
jaccard = "*"
networkx = "*"
MinMaxScaler = "*"
pairwise_distances = "*"
seaborn = "*"
XGBRegressor = "*"
matplotlib.pyplot = "*"
psutil = "*"
train_test_split = "*"
Dense = "*"
numpy = "*"
dump = "*"
Sequential = "*"
mean_squared_error = "*"
Adam = "*"
os = "*"
silhouette_score = "*"
MultiOutputRegressor = "*"
KMeans = "*"
PCA = "*"
pandas = "*"
AgglomerativeClustering = "*"
